# step_motor_28byj_48

./: .gitignore  AGENTS.md  HISTORY.rst  Makefile  README.md  pyproject.toml  survey.7z
.agents/summary/: architecture.md  codebase_info.md  components.md  data_models.md  dependencies.md  index.md  interfaces.md  review_notes.md  workflows.md
docs/: conf.py
step_motor_28byj_48/: __init__.py  motor.py
tests/: __init__.py  conftest.py  test_motor.py
