[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "step-motor-28byj-48"
version = "1.0.0"
description = "Raspberry Pi driver for 28BYJ-48 stepper motor with ULN2003 driver board"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
authors = [{ name = "Andrew Browne", email = "andy.maildrop@gmail.com" }]
keywords = ["raspberry-pi", "stepper-motor", "28byj-48", "uln2003", "gpio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = ["RPi.GPIO>=0.7.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "mypy>=1.0", "ruff>=0.4"]

[project.urls]
Repository = "https://github.com/frankenwino/step_motor_28byj_48"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
